--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Minha primeira página</title>
 </head>
 <body>
-    Olá mundo!
-    Minha primeira página web
+    <h1>Olá mundo!</h1>
+    <p>Esta é minha <b>primeira</b> página web</p>
+    <hr>
+    <!--Link para o repositório do github-->
+    <a href="https://github.com/Jhuan-Martins/aula-html-exercicio">Meu repositório no github!</a>
 </body>
 </html>
