--- a/index.html
+++ b/index.html
@@ -3,13 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha primeira página</title>
+    <title>Por mim?</title>
 </head>
 <body>
-    <h1>Olá mundo!</h1>
-    <p>Esta é minha <b>primeira</b> página web</p>
-    <hr>
-    <!--Link para o repositório do github-->
-    <a href="https://github.com/Jhuan-Martins/aula-html-exercicio">Meu repositório no github!</a>
+    <h1>Por mim?</h1>
+    <h2>Álvares de Azevedo</h2><hr>
+    <p>
+        Teus negros olhos uma vez fitando<br>
+        Senti que luz mais branda os acendia,<br>
+        Pálida de langor, eu vi, te olhando,<br>
+        Mulher do meu amor, meu serafim,<br>
+        Esse amor que em teus olhos refletia...<br>
+        Talvez! - era por mim?
+    </p>
+    <p>
+        Pendeste, suspirando, a face pura,<br>
+        Morreu nos lábios teus um ai perdido...<br>
+        Tão ébrio de paixão e de ventura!<br>
+        Mulher de meu amor, meu serafim,<br>
+        Por quem era o suspiro amortecido?<br>
+        Suspiravas por mim?...
+    </p>
+    <p>
+        Mas... eu sei!... ai de mim? Eu vi na dança<br>
+        Um olhar que em teus olhos se fitava...<br>
+        Ouvi outro suspiro... d'esperança!<br>
+        Mulher do meu amor, meu serafim,<br>
+        Teu olhar, teu suspiro que matava...<br>
+        Oh! não eram por mim.
+
+    </p><hr>
 </body>
 </html>
